# zoneto

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
docs/: model-metrics.md
docs/design-plans/: 2026-02-28-toronto-building-data-pipeline.md  2026-03-01-development-applications.md  2026-03-03-development-outcome-prediction.md
docs/implementation-plans/2026-02-28-toronto-building-data-pipeline/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md
docs/implementation-plans/2026-03-01-development-applications/: phase_01.md  phase_02.md  phase_03.md  phase_04.md
docs/implementation-plans/2026-03-03-development-outcome-prediction/: phase_01.md  phase_02.md  phase_03.md  phase_04.md
src/zoneto/: cli.py  models.py  storage.py
src/zoneto/analytics/: enrich.py  features.py  importance.py  score.py  train.py
src/zoneto/sources/: base.py  ckan.py  registry.py
tests/: test_ckan_bulk_csv.py  test_ckan_datastore.py  test_cli.py  test_models.py  test_registry.py  test_storage.py
tests/analytics/: test_enrich.py  test_features.py  test_importance.py  test_score.py  test_train.py
