[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoneto"
version = "0.1.0"
description = "Toronto building application data pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "joblib>=1.3",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=17.0",
    "pydantic>=2.0",
    "pyproj>=3.6",
    "rich>=13.0",
    "scikit-learn>=1.4",
    "shapely>=2.0",
    "typer>=0.12",
]

[project.scripts]
zoneto = "zoneto.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zoneto"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.8",
    "ty>=0.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
